Added link to logo and box sizing to all elements on the page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <header>
         <div id="logo">
             <img src="dist/vendor/modules/logo/img/logo.png" alt="IKNSA - Blog logo">
+            <a href="/"></a>
         </div>
         <nav>
             <ul>
