Styled main side bar

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, user-scalable = yes">
 
-    <link rel="stylesheet" href="dist/css/lib.css">
     <link rel="stylesheet" href="dist/css/normalize.css">
     <link rel="stylesheet" href="dist/vendor/modules/base/base.css">
     <link rel="stylesheet" href="dist/vendor/modules/header/header.css">
     <link rel="stylesheet" href="dist/vendor/modules/logo/logo.css">
     <link rel="stylesheet" href="dist/vendor/modules/nav/nav.css">
     <link rel="stylesheet" href="dist/vendor/modules/search/search.css">
+    <link rel="stylesheet" href="dist/vendor/modules/main-sidebar/main-sidebar.css">
+    <link rel="stylesheet" href="dist/vendor/modules/mini-presentation/mini-presentation.css">
+    <link rel="stylesheet" href="dist/vendor/modules/popular-categories/popular-categories.css">
+    <link rel="stylesheet" href="dist/vendor/modules/popular-tags/popular-tags.css">
 </head>
 <body>
     <!--[if lt IE 7]>
@@ -44,6 +47,52 @@
             </form>
         </div>
     </header>
+
+    <aside class="main-sidebar">
+        <aside>
+            <h5>What's hot</h5>
+            <article class="mini-presentation">
+                <img src="dist/vendor/modules/mini-presentation/img/coffee.jpg" alt="Main image of the post">
+                <h2>A Cup of Coffee Always Relax You From All Tensions</h2>
+                <a href="#"></a>
+            </article>
+            <article class="mini-presentation">
+                <img src="dist/vendor/modules/mini-presentation/img/cat.jpg" alt="Main image of the post">
+                <h2>Road Bike Party With Ashton</h2>
+                <a href="#"></a>
+            </article>
+            <article class="mini-presentation">
+                <img src="dist/vendor/modules/mini-presentation/img/tablets.jpg" alt="Main image of the post">
+                <h2>Sudden Downfall in Sensex Shook the Traders</h2>
+                <a href="#"></a>
+            </article>
+        </aside>
+        <aside>
+            <h5>Popular categories</h5>
+            <div class="pupular-categories">
+                <h6><a href="#">Fashion <span>(8)</span></a></h6>
+                <h6><a href="#">Cinema <span>(8)</span></a></h6>
+                <h6><a href="#">Series <span>(8)</span></a></h6>
+                <h6><a href="#">Music <span>(8)</span></a></h6>
+                <h6><a href="#">Sports <span>(8)</span></a></h6>
+                <h6><a href="#">Books <span>(8)</span></a></h6>
+            </div>
+        </aside>
+        <aside>
+            <h5>Popular tags</h5>
+            <div class="popular-tags">
+                <h6><a href="#">Fashion</a></h6>
+                <h6><a href="#">Cinema</a></h6>
+                <h6><a href="#">Series</a></h6>
+                <h6><a href="#">Music</a></h6>
+                <h6><a href="#">Sports</a></h6>
+                <h6><a href="#">Books</a></h6>
+            </div>
+        </aside>
+    </aside>
+    <main>
+    </main>
+
     <!-- Js section -->
     <!-- <script src="js/dist/all.js"></script> -->
 
