--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <link rel="stylesheet" href="dist/vendor/modules/mini-presentation/mini-presentation.css">
     <link rel="stylesheet" href="dist/vendor/modules/popular-categories/popular-categories.css">
     <link rel="stylesheet" href="dist/vendor/modules/popular-tags/popular-tags.css">
+    <link rel="stylesheet" href="dist/vendor/modules/main/main.css">
+    <link rel="stylesheet" href="dist/vendor/modules/containers/main-container.css">
+    <link rel="stylesheet" href="dist/vendor/modules/posts/post-summary.css">
 </head>
 <body>
     <!--[if lt IE 7]>
@@ -48,50 +51,117 @@
         </div>
     </header>
 
-    <aside class="main-sidebar">
-        <aside>
-            <h5>What's hot</h5>
-            <article class="mini-presentation">
-                <img src="dist/vendor/modules/mini-presentation/img/coffee.jpg" alt="Main image of the post">
-                <h2>A Cup of Coffee Always Relax You From All Tensions</h2>
-                <a href="#"></a>
-            </article>
-            <article class="mini-presentation">
-                <img src="dist/vendor/modules/mini-presentation/img/cat.jpg" alt="Main image of the post">
-                <h2>Road Bike Party With Ashton</h2>
-                <a href="#"></a>
-            </article>
-            <article class="mini-presentation">
-                <img src="dist/vendor/modules/mini-presentation/img/tablets.jpg" alt="Main image of the post">
-                <h2>Sudden Downfall in Sensex Shook the Traders</h2>
-                <a href="#"></a>
-            </article>
+    <div class="main-container">
+        <aside class="main-sidebar">
+            <aside>
+                <h5>What's hot</h5>
+                <article class="mini-presentation">
+                    <img src="dist/vendor/modules/mini-presentation/img/coffee.jpg" alt="Main image of the post">
+                    <h2>A Cup of Coffee Always Relax You From All Tensions</h2>
+                    <a href="#"></a>
+                </article>
+                <article class="mini-presentation">
+                    <img src="dist/vendor/modules/mini-presentation/img/cat.jpg" alt="Main image of the post">
+                    <h2>Road Bike Party With Ashton</h2>
+                    <a href="#"></a>
+                </article>
+                <article class="mini-presentation">
+                    <img src="dist/vendor/modules/mini-presentation/img/tablets.jpg" alt="Main image of the post">
+                    <h2>Sudden Downfall in Sensex Shook the Traders</h2>
+                    <a href="#"></a>
+                </article>
+            </aside>
+            <aside>
+                <h5>Popular categories</h5>
+                <div class="pupular-categories">
+                    <h6><a href="#">Fashion <span>(8)</span></a></h6>
+                    <h6><a href="#">Cinema <span>(8)</span></a></h6>
+                    <h6><a href="#">Series <span>(8)</span></a></h6>
+                    <h6><a href="#">Music <span>(8)</span></a></h6>
+                    <h6><a href="#">Sports <span>(8)</span></a></h6>
+                    <h6><a href="#">Books <span>(8)</span></a></h6>
+                </div>
+            </aside>
+            <aside>
+                <h5>Popular tags</h5>
+                <div class="popular-tags">
+                    <h6><a href="#">Fashion</a></h6>
+                    <h6><a href="#">Cinema</a></h6>
+                    <h6><a href="#">Series</a></h6>
+                    <h6><a href="#">Music</a></h6>
+                    <h6><a href="#">Sports</a></h6>
+                    <h6><a href="#">Books</a></h6>
+                </div>
+            </aside>
         </aside>
-        <aside>
-            <h5>Popular categories</h5>
-            <div class="pupular-categories">
-                <h6><a href="#">Fashion <span>(8)</span></a></h6>
-                <h6><a href="#">Cinema <span>(8)</span></a></h6>
-                <h6><a href="#">Series <span>(8)</span></a></h6>
-                <h6><a href="#">Music <span>(8)</span></a></h6>
-                <h6><a href="#">Sports <span>(8)</span></a></h6>
-                <h6><a href="#">Books <span>(8)</span></a></h6>
-            </div>
-        </aside>
-        <aside>
-            <h5>Popular tags</h5>
-            <div class="popular-tags">
-                <h6><a href="#">Fashion</a></h6>
-                <h6><a href="#">Cinema</a></h6>
-                <h6><a href="#">Series</a></h6>
-                <h6><a href="#">Music</a></h6>
-                <h6><a href="#">Sports</a></h6>
-                <h6><a href="#">Books</a></h6>
-            </div>
-        </aside>
-    </aside>
-    <main>
-    </main>
+        <main>
+            <h5>The new stuff</h5>
+
+            <section>
+                <figure>
+                    <img src="dist/vendor/modules/mini-presentation/img/tablets.jpg" alt="Main image of the post">
+                    <a href="#"></a>
+                </figure>
+                <div class="details-container">
+                    <div class="details">
+                        <ul>
+                            <li><a href="#">digital art</a></li>
+                            <li><a href="#">fashion</a></li>
+                            <li><a href="#">lifestyle</a></li>
+                        </ul>
+
+                        <div class="date">
+                            <span class="day">23</span>
+                            <span class="month">Jan</span>
+                            <span class="year">2015</span>
+                        </div>
+                        <h1><a href="#">Sudden Downfall in Sensex Shook the Traders</a></h1>
+                        <p><a href="#">Nullam facilisis, nunc vitae elementum dapibus, leo nulla aliquet lectus, sit amet semper ante neque eu lectus. Fusce nec leo magna. Maecenas a dolor vel lorem vestibulum pulvinar at at felis. Cum sociis natoque penatibus et magnis dis parturient montes,</a></p>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <figure>
+                    <img src="dist/vendor/modules/mini-presentation/img/tablets.jpg" alt="Main image of the post">
+                </figure>
+                <div class="details">
+                    <ul>
+                        <li><a href="#">digital art</a></li>
+                        <li><a href="#">fashion</a></li>
+                        <li><a href="#">lifestyle</a></li>
+                    </ul>
+
+                    <div class="date">
+                        <span class="year">2015</span>
+                        <span class="month">Jan</span>
+                        <span class="day">23</span>
+                    </div>
+                    <h1>Sudden Downfall in Sensex Shook the Traders</h1>
+                    <p>Nullam facilisis, nunc vitae elementum dapibus, leo nulla aliquet lectus, sit amet semper ante neque eu lectus. Fusce nec leo magna. Maecenas a dolor vel lorem vestibulum pulvinar at at felis. Cum sociis natoque penatibus et magnis dis parturient montes,</p>
+                </div>
+            </section>
+            <section>
+                <figure>
+                    <img src="dist/vendor/modules/mini-presentation/img/tablets.jpg" alt="Main image of the post">
+                </figure>
+                <div class="details">
+                    <ul>
+                        <li><a href="#">digital art</a></li>
+                        <li><a href="#">fashion</a></li>
+                        <li><a href="#">lifestyle</a></li>
+                    </ul>
+
+                    <div class="date">
+                        <span class="year">2015</span>
+                        <span class="month">Jan</span>
+                        <span class="day">23</span>
+                    </div>
+                    <h1>Sudden Downfall in Sensex Shook the Traders</h1>
+                    <p>Nullam facilisis, nunc vitae elementum dapibus, leo nulla aliquet lectus, sit amet semper ante neque eu lectus. Fusce nec leo magna. Maecenas a dolor vel lorem vestibulum pulvinar at at felis. Cum sociis natoque penatibus et magnis dis parturient montes,</p>
+                </div>
+            </section>
+        </main>
+    </div>
 
     <!-- Js section -->
     <!-- <script src="js/dist/all.js"></script> -->
