Finished main section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="dist/css/normalize.css">
     <link rel="stylesheet" href="dist/vendor/modules/base/base.css">
+    <link rel="stylesheet" href="dist/vendor/modules/fonts/fonts.css">
     <link rel="stylesheet" href="dist/vendor/modules/header/header.css">
     <link rel="stylesheet" href="dist/vendor/modules/logo/logo.css">
     <link rel="stylesheet" href="dist/vendor/modules/nav/nav.css">
@@ -123,41 +124,47 @@
             <section>
                 <figure>
                     <img src="dist/vendor/modules/mini-presentation/img/tablets.jpg" alt="Main image of the post">
+                    <a href="#"></a>
                 </figure>
-                <div class="details">
-                    <ul>
-                        <li><a href="#">digital art</a></li>
-                        <li><a href="#">fashion</a></li>
-                        <li><a href="#">lifestyle</a></li>
-                    </ul>
+                <div class="details-container">
+                    <div class="details">
+                        <ul>
+                            <li><a href="#">digital art</a></li>
+                            <li><a href="#">fashion</a></li>
+                            <li><a href="#">lifestyle</a></li>
+                        </ul>
 
-                    <div class="date">
-                        <span class="year">2015</span>
-                        <span class="month">Jan</span>
-                        <span class="day">23</span>
+                        <div class="date">
+                            <span class="day">23</span>
+                            <span class="month">Jan</span>
+                            <span class="year">2015</span>
+                        </div>
+                        <h1><a href="#">Sudden Downfall in Sensex Shook the Traders</a></h1>
+                        <p><a href="#">Nullam facilisis, nunc vitae elementum dapibus, leo nulla aliquet lectus, sit amet semper ante neque eu lectus. Fusce nec leo magna. Maecenas a dolor vel lorem vestibulum pulvinar at at felis. Cum sociis natoque penatibus et magnis dis parturient montes,</a></p>
                     </div>
-                    <h1>Sudden Downfall in Sensex Shook the Traders</h1>
-                    <p>Nullam facilisis, nunc vitae elementum dapibus, leo nulla aliquet lectus, sit amet semper ante neque eu lectus. Fusce nec leo magna. Maecenas a dolor vel lorem vestibulum pulvinar at at felis. Cum sociis natoque penatibus et magnis dis parturient montes,</p>
                 </div>
             </section>
             <section>
                 <figure>
                     <img src="dist/vendor/modules/mini-presentation/img/tablets.jpg" alt="Main image of the post">
+                    <a href="#"></a>
                 </figure>
-                <div class="details">
-                    <ul>
-                        <li><a href="#">digital art</a></li>
-                        <li><a href="#">fashion</a></li>
-                        <li><a href="#">lifestyle</a></li>
-                    </ul>
+                <div class="details-container">
+                    <div class="details">
+                        <ul>
+                            <li><a href="#">digital art</a></li>
+                            <li><a href="#">fashion</a></li>
+                            <li><a href="#">lifestyle</a></li>
+                        </ul>
 
-                    <div class="date">
-                        <span class="year">2015</span>
-                        <span class="month">Jan</span>
-                        <span class="day">23</span>
+                        <div class="date">
+                            <span class="day">23</span>
+                            <span class="month">Jan</span>
+                            <span class="year">2015</span>
+                        </div>
+                        <h1><a href="#">Sudden Downfall in Sensex Shook the Traders</a></h1>
+                        <p><a href="#">Nullam facilisis, nunc vitae elementum dapibus, leo nulla aliquet lectus, sit amet semper ante neque eu lectus. Fusce nec leo magna. Maecenas a dolor vel lorem vestibulum pulvinar at at felis. Cum sociis natoque penatibus et magnis dis parturient montes,</a></p>
                     </div>
-                    <h1>Sudden Downfall in Sensex Shook the Traders</h1>
-                    <p>Nullam facilisis, nunc vitae elementum dapibus, leo nulla aliquet lectus, sit amet semper ante neque eu lectus. Fusce nec leo magna. Maecenas a dolor vel lorem vestibulum pulvinar at at felis. Cum sociis natoque penatibus et magnis dis parturient montes,</p>
                 </div>
             </section>
         </main>
