Finished left sidebar

--- a/index.html
+++ b/index.html
@@ -174,48 +174,56 @@
                 <h5>Featured</h5>
                 <article class="">
                     <img src="dist/vendor/modules/mini-presentation/img/coffee.jpg" alt="Main image of the post">
-                    <h2>A Cup of Coffee Always Relax You From All Tensions</h2>
+                    <div>
+                        <h2>A Cup of Coffee Always Relax You From All Tensions</h2>
+                    </div>
                     <a href="#"></a>
                 </article>
                 <article class="">
                     <img src="dist/vendor/modules/mini-presentation/img/cat.jpg" alt="Main image of the post">
-                    <h2>Road Bike Party With Ashton</h2>
+                    <div>
+                        <h2>Road Bike Party With Ashton</h2>
+                    </div>
                     <a href="#"></a>
                 </article>
                 <article class="">
                     <img src="dist/vendor/modules/mini-presentation/img/tablets.jpg" alt="Main image of the post">
-                    <h2>Sudden Downfall in Sensex Shook the Traders</h2>
+                    <div>
+                        <h2>Sudden Downfall in Sensex Shook the Traders</h2>
+                    </div>
                     <a href="#"></a>
                 </article>
                 <article class="">
                     <img src="dist/vendor/modules/mini-presentation/img/tablets.jpg" alt="Main image of the post">
-                    <h2>Sudden Downfall in Sensex Shook the Traders</h2>
+                    <div>
+                        <h2>Sudden Downfall in Sensex Shook the Traders</h2>
+                    </div>
                     <a href="#"></a>
                 </article>
             </aside>
             <aside class="popular-posts">
                 <h5>Popular posts</h5>
-                <article class="">
+                <article class="mini-presentation">
                     <img src="dist/vendor/modules/mini-presentation/img/coffee.jpg" alt="Main image of the post">
                     <h2>A Cup of Coffee Always Relax You From All Tensions</h2>
                     <a href="#"></a>
                 </article>
-                <article class="">
+                <article class="mini-presentation">
                     <img src="dist/vendor/modules/mini-presentation/img/cat.jpg" alt="Main image of the post">
                     <h2>Road Bike Party With Ashton</h2>
                     <a href="#"></a>
                 </article>
-                <article class="">
+                <article class="mini-presentation">
                     <img src="dist/vendor/modules/mini-presentation/img/tablets.jpg" alt="Main image of the post">
                     <h2>Sudden Downfall in Sensex Shook the Traders</h2>
                     <a href="#"></a>
                 </article>
-                <article class="">
+                <article class="mini-presentation">
                     <img src="dist/vendor/modules/mini-presentation/img/cat.jpg" alt="Main image of the post">
                     <h2>Road Bike Party With Ashton</h2>
                     <a href="#"></a>
                 </article>
-                <article class="">
+                <article class="mini-presentation">
                     <img src="dist/vendor/modules/mini-presentation/img/tablets.jpg" alt="Main image of the post">
                     <h2>Sudden Downfall in Sensex Shook the Traders</h2>
                     <a href="#"></a>
