--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
     <link rel="stylesheet" href="dist/vendor/modules/containers/main-container.css">
     <link rel="stylesheet" href="dist/vendor/modules/posts/post-summary.css">
     <link rel="stylesheet" href="dist/vendor/modules/left-sidebar/left-sidebar.css">
+    <link rel="stylesheet" href="dist/vendor/modules/pagination/pagination.css">
+    <link rel="stylesheet" href="dist/vendor/modules/footer/footer.css">
 </head>
 <body>
     <!--[if lt IE 7]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <img src="http://2.bp.blogspot.com/-8wlxypyG_HI/Ut4ixrpBS4I/AAAAAAAAEuw/1RfIWGlCEH4/s1600/bg.jpg" alt="" class="bg-img">
+    <div class="image-bg"></div>
     <header>
         <div id="logo">
             <img src="dist/vendor/modules/logo/img/logo.png" alt="IKNSA - Blog logo">
@@ -168,6 +172,16 @@
                     </div>
                 </div>
             </section>
+
+            <aside class="pagination">
+                <span><a href="#"></a>First</span>
+                <span><a href="#"></a>Previous</span>
+                <span class="current"><a href="#"></a>3</span>
+                <span><a href="#"></a>4</span>
+                <span><a href="#"></a>5</span>
+                <span><a href="#"></a>Next</span>
+                <span><a href="#"></a>Last</span>
+            </aside>
         </main>
         <aside class="left-sidebar">
             <aside class="featured">
@@ -230,6 +244,47 @@
                 </article>
             </aside>
         </aside>
+
+        <footer>
+            <div class="column about">
+                <h6>About Us</h6>
+                <ul>
+                    <li>
+                        <ul>
+                            <li><a href="#">Who we are</a></li>
+                            <li><a href="#">What we do</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="column connect">
+                <h6>Connect</h6>
+                <ul>
+                    <li>
+                        <ul>
+                            <li><a href="#">Who we are</a></li>
+                            <li><a href="#">What we do</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            
+            <div class="column social">
+                <h6>Get Social</h6>
+                <ul>
+                    <li>
+                        <ul>
+                            <li><a href="#">Who we are</a></li>
+                            <li><a href="#">What we do</a></li>
+                            <li><a href="#">What we do</a></li>
+                            <li><a href="#">What we do</a></li>
+                            <li><a href="#">What we do</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </footer>
     </div>
 
     <!-- Js section -->
