made few corrections

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="dist/vendor/modules/main/main.css">
     <link rel="stylesheet" href="dist/vendor/modules/containers/main-container.css">
     <link rel="stylesheet" href="dist/vendor/modules/posts/post-summary.css">
-    <link rel="stylesheet" href="dist/vendor/modules/left-sidebar/left-sidebar.css">
+    <link rel="stylesheet" href="dist/vendor/modules/right-sidebar/right-sidebar.css">
     <link rel="stylesheet" href="dist/vendor/modules/pagination/pagination.css">
     <link rel="stylesheet" href="dist/vendor/modules/footer/footer.css">
 </head>
@@ -183,7 +183,7 @@
                 <span><a href="#"></a>Last</span>
             </aside>
         </main>
-        <aside class="left-sidebar">
+        <aside class="right-sidebar">
             <aside class="featured">
                 <h5>Featured</h5>
                 <article class="">
