Still doing some corrections

--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
             </section>
 
             <aside class="pagination">
-                <span><a href="#"></a>First</span>
-                <span><a href="#"></a>Previous</span>
-                <span class="current"><a href="#"></a>3</span>
-                <span><a href="#"></a>4</span>
-                <span><a href="#"></a>5</span>
-                <span><a href="#"></a>Next</span>
-                <span><a href="#"></a>Last</span>
+                <span><a href="#">First</a></span>
+                <span><a href="#">Previous</a></span>
+                <span class="current">3</span>
+                <span><a href="#">4</a></span>
+                <span><a href="#">5</a></span>
+                <span><a href="#">Next</a></span>
+                <span><a href="#">Last</a></span>
             </aside>
         </main>
         <aside class="right-sidebar">
