Finished comments section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!--[if lt IE 7]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <img src="http://2.bp.blogspot.com/-8wlxypyG_HI/Ut4ixrpBS4I/AAAAAAAAEuw/1RfIWGlCEH4/s1600/bg.jpg" alt="" class="bg-img">
+    <img src="dist/vendor/modules/base/img/bg.jpg" alt="" class="bg-img">
     <div class="image-bg"></div>
     <header>
         <div id="logo">
@@ -110,7 +110,7 @@
                 </figure>
                 <div class="details-container">
                     <div class="details">
-                        <ul>
+                        <ul class="breadcrumb">
                             <li><a href="#">digital art</a></li>
                             <li><a href="#">fashion</a></li>
                             <li><a href="#">lifestyle</a></li>
@@ -133,7 +133,7 @@
                 </figure>
                 <div class="details-container">
                     <div class="details">
-                        <ul>
+                        <ul class="breadcrumb">
                             <li><a href="#">digital art</a></li>
                             <li><a href="#">fashion</a></li>
                             <li><a href="#">lifestyle</a></li>
@@ -156,7 +156,7 @@
                 </figure>
                 <div class="details-container">
                     <div class="details">
-                        <ul>
+                        <ul class="breadcrumb">
                             <li><a href="#">digital art</a></li>
                             <li><a href="#">fashion</a></li>
                             <li><a href="#">lifestyle</a></li>
