--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
             </aside>
         </aside>
-        <main>
+        <main id="home">
             <h5>The new stuff</h5>
 
             <section>
@@ -249,39 +249,27 @@
             <div class="column about">
                 <h6>About Us</h6>
                 <ul>
-                    <li>
-                        <ul>
-                            <li><a href="#">Who we are</a></li>
-                            <li><a href="#">What we do</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="#">Who we are</a></li>
+                    <li><a href="#">What we do</a></li>
                 </ul>
             </div>
 
             <div class="column connect">
                 <h6>Connect</h6>
                 <ul>
-                    <li>
-                        <ul>
-                            <li><a href="#">Who we are</a></li>
-                            <li><a href="#">What we do</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="#">Who we are</a></li>
+                    <li><a href="#">What we do</a></li>
                 </ul>
             </div>
             
             <div class="column social">
                 <h6>Get Social</h6>
                 <ul>
-                    <li>
-                        <ul>
-                            <li><a href="#">Who we are</a></li>
-                            <li><a href="#">What we do</a></li>
-                            <li><a href="#">What we do</a></li>
-                            <li><a href="#">What we do</a></li>
-                            <li><a href="#">What we do</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="#">Who we are</a></li>
+                    <li><a href="#">What we do</a></li>
+                    <li><a href="#">What we do</a></li>
+                    <li><a href="#">What we do</a></li>
+                    <li><a href="#">What we do</a></li>
                 </ul>
             </div>
         </footer>
